--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
 
       <section class="section section__how-to-better">
         <h2 class="section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        <ul class="section__list">
+        <div class="list__container">
           <h3 class="list__title text-decor">5 простых (на самом деле не очень) советов</h3>
+        <ul class="section__list">
           <li class="list__item">
             <article class="list__article">
               <h4 class="list__article__title text-decor">Представьте небо и облака</h4>
@@ -166,6 +167,7 @@
             </article>
           </li>
         </ul>
+        </div>
       </section>
 
       <section class="section section__pictures">
